--- a/H5T01-5f8312b24d4349aece55618999b4b1c1297c5996/00template/index.html
+++ b/H5T01-5f8312b24d4349aece55618999b4b1c1297c5996/00template/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Templates 01</title>
+    <title>Templates</title>
 
     <!-- styles -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
 </head>
@@ -27,9 +28,9 @@
                 <li><a href="#">Location</a></li>
             </ul>
             <ul class="icons">
-                <li><a href="#">Facebook</a></li>
-                <li><a href="#">Instagram</a></li>
-                <li><a href="#">Kakaotalk</a></li>
+                <li><i class="fab fa-facebook"></i></li>
+                <li><i class="fab fa-twitter-square"></i></li>
+                <li><i class="fab fa-kaggle"></i></li>
             </ul>
         </nav>
 
@@ -79,9 +80,9 @@
                 <section>
                     <h3>Social</h3>
                     <ul>
-                        <li><a href="#">Facebook</a></li>
-                        <li><a href="#">Instagram</a></li>
-                        <li><a href="#">Kakaotalk</a></li>
+                        <li><i class="fab fa-facebook fa-2x"></i></li>
+                        <li><i class="fab fa-twitter-square fa-2x"></i></li>
+                        <li><i class="fab fa-kaggle fa-2x"></i></li>
                     </ul>
                 </section>
             </section>
